--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ datvutru {
   <li>Thắng Sky là người đẹp trai nhất thế giới chỉ sau Đỗ Chủ Tịch</li>
   </ul>
   <a href="https://www.facebook.com/profile.php?id=100012809651089" target="_self">
-  <img id="choigay" src="file:///F|/htmlrar/html2/1111.png"  alt="Chơi gay nhay ,Ưu tiên khoai to 6 múi"/>
+  <img id="choigay" src="https://scontent.fhan5-6.fna.fbcdn.net/v/t1.15752-9/82771882_518702068852164_8011295084391694336_n.png?_nc_cat=105&_nc_ohc=ALhwXC-W7icAX_GKcgJ&_nc_ht=scontent.fhan5-6.fna&oh=0da31f615c1aae6c0fd2513c36c66ae2&oe=5E99FEA5"  alt="Chơi gay ngay ,Ưu tiên khoai to 6 múi"/>
   </a>
 	</p>
   
