--- a/index.html
+++ b/index.html
@@ -95,9 +95,14 @@ datvutru {
   <li>Đã bán thận</li>
   <li>Thắng Sky là người đẹp trai nhất thế giới chỉ sau Đỗ Chủ Tịch</li>
   </ul>
+  
+  <br/>
+  <p style="text-align:center">
   <a href="https://www.facebook.com/profile.php?id=100012809651089" target="_self">
-  <img id="choigay" src="file:///F|/htmlrar/html2/1111.png"  alt="Ưu tiên khoai to 6 múi"/>
+  <img src="file:///F|/htmlrar/html2/1111.png"  alt="Ưu tiên khoai to 6 múi"/>
   </a>
+  </p>
+  
   
   
   
