--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ datvutru {
   <br/>
   <p style="text-align:center">
   <a href="https://www.facebook.com/profile.php?id=100012809651089" target="_self">
-  <img src="file:///F|/htmlrar/html2/1111.png"  alt="Ưu tiên khoai to 6 múi"/>
+  <img src="https://scontent.fhan5-6.fna.fbcdn.net/v/t1.15752-9/82771882_518702068852164_8011295084391694336_n.png?_nc_cat=105&_nc_ohc=ALhwXC-W7icAX_KwZaJ&_nc_ht=scontent.fhan5-6.fna&oh=c1df60065db4f2685576c2dce2bca4cc&oe=5E99FEA5"  alt="Ưu tiên khoai to 6 múi"/>
   </a>
   </p> 
 </div>
